--- a/sdk/agrifood/azure-agrifood-farming/tests/recordings/test_smoke.test_satellite_job.yaml
+++ b/sdk/agrifood/azure-agrifood-farming/tests/recordings/test_smoke.test_satellite_job.yaml
@@ -11,10 +11,10 @@ interactions:
       User-Agent:
       - azsdk-python-agrifood-farming/1.0.0b1 Python/3.7.4 (Windows-10-10.0.19041-SP0)
     method: GET
-    uri: https://fakeAccount.farmbeats.azure.net/farmers/fake-farmer/boundaries/fake-boundary-scenes?api-version=2021-03-31-preview
+    uri: https://fakeAccount.farmbeats.azure.net/parties/fake-party/boundaries/fake-boundary-scenes?api-version=2021-03-31-preview
   response:
     body:
-      string: '{"farmerId":"fake-farmer","geometry":{"type":"Polygon","coordinates":[[[73.70457172393799,20.545385304358106],[73.70457172393799,20.545385304358106],[73.70448589324951,20.542411534243367],[73.70877742767334,20.541688176010233],[73.71023654937744,20.545083911372505],[73.70663166046143,20.546992723579137],[73.70457172393799,20.545385304358106]]]},"isPrimary":false,"acreage":60.40491151079627,"id":"fake-boundary-scenes","eTag":"cc00d754-0000-0600-0000-60a26af50000","createdDateTime":"2021-05-17T13:09:09Z","modifiedDateTime":"2021-05-17T13:09:09Z","description":"Created
+      string: '{"partyId":"fake-party","geometry":{"type":"Polygon","coordinates":[[[73.70457172393799,20.545385304358106],[73.70457172393799,20.545385304358106],[73.70448589324951,20.542411534243367],[73.70877742767334,20.541688176010233],[73.71023654937744,20.545083911372505],[73.70663166046143,20.546992723579137],[73.70457172393799,20.545385304358106]]]},"isPrimary":false,"acreage":60.40491151079627,"id":"fake-boundary-scenes","eTag":"cc00d754-0000-0600-0000-60a26af50000","createdDateTime":"2021-05-17T13:09:09Z","modifiedDateTime":"2021-05-17T13:09:09Z","description":"Created
         by SDK"}'
     headers:
       api-deprecated-versions:
@@ -41,7 +41,7 @@ interactions:
       code: 200
       message: OK
 - request:
-    body: '{"farmerId": "fake-farmer", "boundaryId": "fake-boundary-scenes", "startDateTime":
+    body: '{"partyId": "fake-party", "boundaryId": "fake-boundary-scenes", "startDateTime":
       "2020-01-01T00:00:00.000Z", "endDateTime": "2020-01-31T00:00:00.000Z", "data":
       {"imageNames": ["LAI"]}}'
     headers:
@@ -61,7 +61,7 @@ interactions:
     uri: https://fakeAccount.farmbeats.azure.net/scenes/satellite/ingest-data/fake-job-268-268?api-version=2021-03-31-preview
   response:
     body:
-      string: '{"farmerId":"fake-farmer","boundaryId":"fake-boundary-scenes","startDateTime":"2020-01-01T00:00:00Z","endDateTime":"2020-01-31T00:00:00Z","provider":"Microsoft","source":"Sentinel_2_L2A","data":{"imageNames":["LAI"],"imageFormats":["TIF"],"imageResolutions":[10.0]},"id":"fake-job-268-268","status":"Waiting","message":"Created
+      string: '{"partyId":"fake-party","boundaryId":"fake-boundary-scenes","startDateTime":"2020-01-01T00:00:00Z","endDateTime":"2020-01-31T00:00:00Z","provider":"Microsoft","source":"Sentinel_2_L2A","data":{"imageNames":["LAI"],"imageFormats":["TIF"],"imageResolutions":[10.0]},"id":"fake-job-268-268","status":"Waiting","message":"Created
         job ''fake-job-268-268'' to fetch satellite data for boundary ''fake-boundary-scenes''
         from startDate ''01/01/2020'' to endDate ''01/31/2020'' (both inclusive).","createdDateTime":"2021-05-17T21:47:07Z","lastActionDateTime":"2021-05-17T21:47:07Z","startTime":"2021-05-17T21:47:07Z"}'
     headers:
@@ -103,7 +103,7 @@ interactions:
     uri: https://fakeAccount.farmbeats.azure.net/scenes/satellite/ingest-data/fake-job-268-268?api-version=2021-03-31-preview
   response:
     body:
-      string: '{"farmerId":"fake-farmer","boundaryId":"fake-boundary-scenes","startDateTime":"2020-01-01T00:00:00Z","endDateTime":"2020-01-31T00:00:00Z","provider":"Microsoft","source":"Sentinel_2_L2A","data":{"imageNames":["LAI"],"imageFormats":["TIF"],"imageResolutions":[10.0]},"id":"fake-job-268-268","status":"Succeeded","durationInSeconds":4.306813,"message":"Satellite
+      string: '{"partyId":"fake-party","boundaryId":"fake-boundary-scenes","startDateTime":"2020-01-01T00:00:00Z","endDateTime":"2020-01-31T00:00:00Z","provider":"Microsoft","source":"Sentinel_2_L2A","data":{"imageNames":["LAI"],"imageFormats":["TIF"],"imageResolutions":[10.0]},"id":"fake-job-268-268","status":"Succeeded","durationInSeconds":4.306813,"message":"Satellite
         data is available for 12 days from provider in the requested date range. Successfully
         fetched data for 12 days.","createdDateTime":"2021-05-17T21:47:07Z","lastActionDateTime":"2021-05-17T21:47:11Z","startTime":"2021-05-17T21:47:07Z","endTime":"2021-05-17T21:47:11Z"}'
     headers:
@@ -145,7 +145,7 @@ interactions:
     uri: https://fakeAccount.farmbeats.azure.net/scenes/satellite/ingest-data/fake-job-268-268?api-version=2021-03-31-preview
   response:
     body:
-      string: '{"farmerId":"fake-farmer","boundaryId":"fake-boundary-scenes","startDateTime":"2020-01-01T00:00:00Z","endDateTime":"2020-01-31T00:00:00Z","provider":"Microsoft","source":"Sentinel_2_L2A","data":{"imageNames":["LAI"],"imageFormats":["TIF"],"imageResolutions":[10.0]},"id":"fake-job-268-268","status":"Succeeded","durationInSeconds":4.306813,"message":"Satellite
+      string: '{"partyId":"fake-party","boundaryId":"fake-boundary-scenes","startDateTime":"2020-01-01T00:00:00Z","endDateTime":"2020-01-31T00:00:00Z","provider":"Microsoft","source":"Sentinel_2_L2A","data":{"imageNames":["LAI"],"imageFormats":["TIF"],"imageResolutions":[10.0]},"id":"fake-job-268-268","status":"Succeeded","durationInSeconds":4.306813,"message":"Satellite
         data is available for 12 days from provider in the requested date range. Successfully
         fetched data for 12 days.","createdDateTime":"2021-05-17T21:47:07Z","lastActionDateTime":"2021-05-17T21:47:11Z","startTime":"2021-05-17T21:47:07Z","endTime":"2021-05-17T21:47:11Z"}'
     headers:
