--- a/sdk/ml/azure-ai-ml/tests/test_configs/pipeline_jobs/data_transfer/merge_mixtype_files.yaml
+++ b/sdk/ml/azure-ai-ml/tests/test_configs/pipeline_jobs/data_transfer/merge_mixtype_files.yaml
@@ -6,19 +6,18 @@ settings:
   default_compute: azureml:adftest
 inputs:
   input1:
-    type: uri_file
-    path: azureml://locations/centraluseuap/workspaces/80eaba04-c6ec-4775-8ddc-d538e9642c2d/data/dtv2_test_adlsgen1_folder/versions/1
+    type: uri_folder
+    path: ../../data/
   input2:
     type: uri_file
-    path: azureml://locations/centraluseuap/workspaces/80eaba04-c6ec-4775-8ddc-d538e9642c2d/data/dtv2_test_file/versions/1
+    path: ../../data/sample1.csv
   input3:
-    type: uri_file
-    path: azureml://locations/centraluseuap/workspaces/80eaba04-c6ec-4775-8ddc-d538e9642c2d/data/dtv2_mltable/versions/1
+    type: mltable
+    path: ../../dataset/iris-mltable
 
 outputs:
   merged_blob:
     type: uri_folder
-    path: azureml://datastores/workspaceblobstore/paths/azureml/dtv2_merge_dest2/
 
 jobs:
     merge_files:
