--- a/sdk/agrifood/azure-agrifood-farming/tests/recordings/test_farmer.test_farmer_create.yaml
+++ b/sdk/agrifood/azure-agrifood-farming/tests/recordings/test_farmer.test_farmer_create.yaml
@@ -17,7 +17,7 @@ interactions:
       User-Agent:
       - azsdk-python-agrifood-farming/1.0.0b1 Python/3.7.4 (Windows-10-10.0.19041-SP0)
     method: PATCH
-    uri: https://fakeAccount.farmbeats.azure.net/parties/test-party?api-version=2021-03-31-preview
+    uri: https://fakeaccount.farmbeats.azure.net/parties/test-party?api-version=2021-03-31-preview
   response:
     body:
       string: '{"id":"test-party","eTag":"01001050-0000-0600-0000-60a2de220000","status":"Sample
@@ -60,7 +60,7 @@ interactions:
       User-Agent:
       - azsdk-python-agrifood-farming/1.0.0b1 Python/3.7.4 (Windows-10-10.0.19041-SP0)
     method: GET
-    uri: https://fakeAccount.farmbeats.azure.net/parties/test-party?api-version=2021-03-31-preview
+    uri: https://fakeaccount.farmbeats.azure.net/parties/test-party?api-version=2021-03-31-preview
   response:
     body:
       string: '{"id":"test-party","eTag":"01001050-0000-0600-0000-60a2de220000","status":"Sample
