--- a/eng/pipelines/templates/jobs/perf.yml
+++ b/eng/pipelines/templates/jobs/perf.yml
@@ -1,8 +1,8 @@
 parameters:
-- name: ServiceDirectory
+- name: LanguageVersion
   type: string
-  default: ''
-- name: Services
+  default: '3.11'
+- name: ServiceDirectory
   type: string
   default: ''
 - name: PackageVersions
@@ -30,15 +30,15 @@ extends:
     Variables:
     - template: /eng/pipelines/templates/variables/globals.yml
     - name: PythonVersion
-      value: '3.11'
+      value: ${{ parameters.LanguageVersion }}
     Language: Python
+    LanguageVersion: ${{ parameters.LanguageVersion }}
     InstallLanguageSteps:
     - task: UsePythonVersion@0
       displayName: "Use Python $(PythonVersion)"
       inputs:
         versionSpec: $(PythonVersion)
     ServiceDirectory: ${{ parameters.ServiceDirectory }}
-    Services: ${{ parameters.Services }}
     PackageVersions: ${{ parameters.PackageVersions }}
     Tests: ${{ parameters.Tests }}
     Arguments: ${{ parameters.Arguments }}
