--- a/sdk/ml/azure-ai-ml/tests/test_configs/pipeline_jobs/data_transfer/export_database_to_blob.yaml
+++ b/sdk/ml/azure-ai-ml/tests/test_configs/pipeline_jobs/data_transfer/export_database_to_blob.yaml
@@ -3,13 +3,13 @@ type: pipeline
 
 description: 'pipeline with data transfer components'
 settings:
-  default_compute: azureml:adf_compute
+  default_compute: azureml:adftest
 inputs:
-  connection_target_azuresql: azureml:my_azuresql_connection
-  table_name: merged_table
+  connection_target_azuresql: azureml:my_export_azuresqldb_connection
+  table_name: dbo.Persons
   cosmos_folder:
     type: uri_file
-    path: azureml://datastores/my_cosmos/paths/source_cosmos
+    path: ../../data/testFile_ForSqlDB.parquet
 
 jobs:
   blob_azuresql:
@@ -28,8 +28,8 @@ jobs:
     inputs:
       source:
         type: uri_file
-        path: azureml://datastores/my_cosmos/paths/source_cosmos
+        path: ../../data/testFile_ForSqlDB.parquet
     sink:
       type: database
-      table_name: merged_table
-      connection: azureml:my_azuresql_connection
+      table_name: dbo.Persons
+      connection: azureml:my_export_azuresqldb_connection
