--- a/sdk/ml/azure-ai-ml/tests/test_configs/dsl_pipeline/data_transfer_job_in_pipeline/pipeline.yml
+++ b/sdk/ml/azure-ai-ml/tests/test_configs/dsl_pipeline/data_transfer_job_in_pipeline/pipeline.yml
@@ -3,16 +3,15 @@ type: pipeline
 
 description: 'submit a pipeline with data transfer job'
 settings:
-  default_compute: azureml:adf_compute
+  default_compute: azureml:adftest
 inputs:
-  path_source_s3: s3://my_bucket/my_folder
-  query_source_snowflake: SELECT * FROM my_table
-  connection_target_s3: azureml:my_s3_connection
+  path_source_s3: test1/*
+  query_source_sql: select top(10) Name from SalesLT.ProductCategory
+  connection_target_s3: azureml:my-s3-connection
 
 outputs:
   merged_blob:
     type: uri_folder
-    path: azureml://datastores/my_blob/paths/merged_blob
 
 jobs:
     snowflake_blob:
@@ -20,12 +19,12 @@ jobs:
       task: import_data
       source:
         type: database
-        query: ${{parent.inputs.query_source_snowflake}}
-        connection: azureml:my_snowflake_connection
+        query: ${{parent.inputs.query_source_sql}}
+        connection: azureml:my_azuresqldb_connection
       outputs:
         sink:
           type: mltable
-      compute: azureml:adf_compute1
+      compute: azureml:adftest
 
     s3_blob:
       type: data_transfer
@@ -33,7 +32,7 @@ jobs:
       source:
         type: file_system
         path: ${{parent.inputs.path_source_s3}}
-        connection: azureml:my_s3_connection
+        connection: azureml:my-s3-connection
       outputs:
         sink:
           type: uri_folder
@@ -47,7 +46,6 @@ jobs:
         folder2: ${{parent.jobs.snowflake_blob.outputs.sink}}
       outputs:
         output_folder: ${{parent.outputs.merged_blob}}
-      # use default compute
 
     blob_s3:
       type: data_transfer
@@ -56,5 +54,5 @@ jobs:
         source: ${{parent.jobs.merge_files.outputs.output_folder}}
       sink:
         type: file_system
-        path: ${{parent.inputs.path_source_s3}}
+        path: 'test1/'
         connection: ${{parent.inputs.connection_target_s3}}
