--- a/eng/pipelines/templates/stages/archetype-sdk-client.yml
+++ b/eng/pipelines/templates/stages/archetype-sdk-client.yml
@@ -74,7 +74,7 @@ parameters:
   default: false
 
 variables:
-  - template: ../variables/globals.yml
+  - template: /eng/pipelines/templates/variables/globals.yml
 
 stages:
   - stage: Build
