--- a/eng/pipelines/templates/stages/cosmos-sdk-client.yml
+++ b/eng/pipelines/templates/stages/cosmos-sdk-client.yml
@@ -18,6 +18,9 @@ parameters:
   type: boolean
   default: false
 
+variables:
+  - template: /eng/pipelines/templates/variables/globals.yml
+
 stages:
   - template: /eng/pipelines/templates/stages/archetype-sdk-client.yml
     parameters:
