when archetype-sdk-tests is called multiple times, the static name of nalysis breaks the yaml generation due to identical stage names

--- a/eng/pipelines/templates/stages/archetype-sdk-tests.yml
+++ b/eng/pipelines/templates/stages/archetype-sdk-tests.yml
@@ -143,7 +143,7 @@ stages:
               Cloud: ${{ cloud.key }}
 
 - ${{ if contains(variables['Build.DefinitionName'], 'tests-weekly')  }}:
-  - stage: Analysis
+  - stage: ${{ cloud.key }}_${{ parameters.JobName }}_Analysis
     dependsOn: []
     jobs:
       - job: 'Analyze'
