--- a/eng/black-pyproject.toml
+++ b/eng/black-pyproject.toml
@@ -1,10 +1,8 @@
 [tool.black]
 line-length = 120
 extend-exclude = '''
-# Exclude some directories from formatting (note the slashes at surrounding the pattern)
+# Exclude some directories from formatting (note the slashes surrounding the pattern)
 /(
-  | _vendor
-  | _generated
-  | _restclient
+  _restclient
 )/
 '''
