--- a/eng/pipelines/templates/stages/cosmos-sdk-client.yml
+++ b/eng/pipelines/templates/stages/cosmos-sdk-client.yml
@@ -18,7 +18,7 @@ parameters:
   type: boolean
   default: false
 
-stages:
+extends:
   - template: /eng/pipelines/templates/stages/archetype-sdk-client.yml
     parameters:
       ServiceDirectory: ${{ parameters.ServiceDirectory }}
