fix the extends usage

--- a/eng/pipelines/templates/stages/cosmos-sdk-client.yml
+++ b/eng/pipelines/templates/stages/cosmos-sdk-client.yml
@@ -19,13 +19,13 @@ parameters:
   default: false
 
 extends:
-  - template: /eng/pipelines/templates/stages/archetype-sdk-client.yml
-    parameters:
-      ServiceDirectory: ${{ parameters.ServiceDirectory }}
-      # Skip emulator tests in the CI run
-      TestMarkArgument: not cosmosEmulator
-      InjectedPackages: ${{parameters.InjectedPackages}}
-      Artifacts: ${{parameters.Artifacts}}
+  template: /eng/pipelines/templates/stages/archetype-sdk-client.yml
+  parameters:
+    ServiceDirectory: ${{ parameters.ServiceDirectory }}
+    # Skip emulator tests in the CI run
+    TestMarkArgument: not cosmosEmulator
+    InjectedPackages: ${{parameters.InjectedPackages}}
+    Artifacts: ${{parameters.Artifacts}}
 
 #  - stage: Test_Emulator
 #    dependsOn: []
