--- a/sdk/ml/azure-ai-ml/tests/test_configs/dsl_pipeline/data_transfer_job_in_pipeline/pipeline.yml
+++ b/sdk/ml/azure-ai-ml/tests/test_configs/dsl_pipeline/data_transfer_job_in_pipeline/pipeline.yml
@@ -24,7 +24,6 @@ jobs:
       outputs:
         sink:
           type: mltable
-      compute: azureml:adftest
 
     s3_blob:
       type: data_transfer
@@ -47,12 +46,14 @@ jobs:
       outputs:
         output_folder: ${{parent.outputs.merged_blob}}
 
-    blob_s3:
+    blob_azuresql:
       type: data_transfer
       task: export_data
       inputs:
-        source: ${{parent.jobs.merge_files.outputs.output_folder}}
+        source:
+          type: uri_file
+          path: ./export_database/data/testFile_ForSqlDB.parquet
       sink:
-        type: file_system
-        path: 'test1/'
-        connection: ${{parent.inputs.connection_target_s3}}
+        type: database
+        table_name: dbo.Persons
+        connection: azureml:my_export_azuresqldb_connection
