--- a/sdk/ml/azure-ai-ml/tests/test_configs/pipeline_jobs/serverless_compute/pipeline_with_command.yml
+++ b/sdk/ml/azure-ai-ml/tests/test_configs/pipeline_jobs/serverless_compute/pipeline_with_command.yml
@@ -1,16 +1,11 @@
 $schema: https://azuremlschemas.azureedge.net/latest/pipelineJob.schema.json
 type: pipeline
-display_name: hello_pipeline
+display_name: hello_world_pipeline
+settings:
+  default_compute: azureml:serverless
 jobs:
-  hello_job:
-    command: echo "hello"
+  hello_world:
+    command: echo "Hello World"
     environment: azureml:AzureML-sklearn-1.0-ubuntu20.04-py38-cpu@latest
     resources:
       instance_type: Standard_D3_v2
-    compute: azureml:serverless
-  world_job:
-    command: echo "world"
-    environment: azureml:AzureML-sklearn-1.0-ubuntu20.04-py38-cpu@latest
-    resources:
-      instance_type: Standard_D3_v2
-    compute: azureml:serverless
