--- a/sdk/servicebus/azure-servicebus/stress/templates/testjob.yaml
+++ b/sdk/servicebus/azure-servicebus/stress/templates/testjob.yaml
@@ -15,7 +15,7 @@ spec:
           memory: "2000Mi"
           cpu: "1"
 
-      {{ if eq .Stress.testTarget "servicebusStress" }}
+      {{ if eq .Stress.testTarget "sbStress" }}
       command: ['bash', '-c', 'python3 test_stress_queues.py']
       {{- end -}}
       
