Merge, and lots of other stuff

--- a/sdk/ml/azure-ai-ml/tests/test_configs/federated_learning/example_silo_one_input.yaml
+++ b/sdk/ml/azure-ai-ml/tests/test_configs/federated_learning/example_silo_one_input.yaml
@@ -1,5 +1,5 @@
 compute: "some_compute"
 datastore: "some_datastore"
 inputs: 
-  path: "path_1"
-  type: mltable
+  "test_dataset":
+    path: "some_path"
