--- a/sdk/ml/azure-ai-ml/tests/test_configs/federated_learning/example_silo_list.yaml
+++ b/sdk/ml/azure-ai-ml/tests/test_configs/federated_learning/example_silo_list.yaml
@@ -1,13 +1,9 @@
 silos:
 - compute: "some_compute"
   datastore: "some_datastore"
+- compute: "some_compute2"
+  datastore: "some_datastore2"
   inputs: 
-    - path: "path_1"
-      type: mltable
-    - path: "path_2"
-      type: "uri_folder"
-- compute: "some_compute"
-  datastore: "some_datastore"
-  inputs: 
-    path: "path_1"
-    type: mltable
+    "test_uri":
+      path: "some_path"
+      type: uri_folder
