--- a/sdk/ml/azure-ai-ml/tests/test_configs/pipeline_jobs/serverless_compute/all_types/spark/pipeline.yml
+++ b/sdk/ml/azure-ai-ml/tests/test_configs/pipeline_jobs/serverless_compute/all_types/spark/pipeline.yml
@@ -1,8 +1,8 @@
 $schema: https://azuremlschemas.azureedge.net/latest/pipelineJob.schema.json
 type: pipeline
 display_name: Serverless in Pipeline - Spark
-# settings:
-#   default_compute: azureml:serverless
+settings:
+  default_compute: azureml:serverless
 inputs:
   input1:
     type: uri_file
