--- a/sdk/ml/azure-ai-ml/tests/test_configs/pipeline_jobs/serverless_compute/all_types/automl/components/component_preprocessing.yaml
+++ b/sdk/ml/azure-ai-ml/tests/test_configs/pipeline_jobs/serverless_compute/all_types/automl/components/component_preprocessing.yaml
@@ -17,7 +17,7 @@ code: ./src/
 environment:
   name: pipeline-custom-environment
   image: mcr.microsoft.com/azureml/openmpi4.1.0-ubuntu20.04
-  conda_file: ./env.yaml
+  conda_file: ./preprocessing_env.yaml
 command: >-
   python preprocess.py
   --train_data ${{inputs.train_data}}
