--- a/sdk/identity/azure-identity/tests/integration/azure-functions/Dockerfile
+++ b/sdk/identity/azure-identity/tests/integration/azure-functions/Dockerfile
@@ -8,18 +8,17 @@
 # public OSS users should simply leave this argument blank or ignore its presence entirely
 ARG REGISTRY=""
 
-FROM ${REGISTRY}alpine:3.14 as repo
+FROM ${REGISTRY}alpine:3.19 as repo
 RUN apk --no-cache add git
 RUN git clone https://github.com/Azure/azure-sdk-for-python --single-branch --depth 1 /azure-sdk-for-python
 
 
-FROM mcr.microsoft.com/azure-functions/python:3.0
+FROM mcr.microsoft.com/azure-functions/python:4-python3.11
 
 COPY --from=repo /azure-sdk-for-python/sdk/identity /sdk/identity
 COPY --from=repo /azure-sdk-for-python/sdk/core/azure-core /sdk/core/azure-core
-COPY --from=repo /azure-sdk-for-python/sdk/keyvault/azure-keyvault-secrets /sdk/keyvault/azure-keyvault-secrets
-WORKDIR /sdk/identity/azure-identity/tests/managed-identity-live
-RUN pip install --no-cache-dir -r ../managed-identity-live/requirements.txt azure-functions
+RUN pip install --no-cache-dir /sdk/identity/azure-identity /sdk/core/azure-core aiohttp azure-functions azure-storage-blob
+RUN pip freeze
 
 ENV AzureWebJobsScriptRoot=/home/site/wwwroot \
     AzureFunctionsJobHost__Logging__Console__IsEnabled=true
