--- a/sdk/identity/tests.yml
+++ b/sdk/identity/tests.yml
@@ -15,3 +15,9 @@ stages:
         PFX_CONTENT_PASSWORD_PROTECTED: $(python-identity-certificate-with-password-pfx)
         AZURE_TEST_RUN_LIVE: true
         AZURE_SKIP_LIVE_RECORDING: 'True'
+      CloudConfig:
+        Public:
+          SubscriptionConfigurations:
+            - $(sub-config-azure-cloud-test-resources)
+            # Contains alternate tenant, AAD app and cert info for testing
+            - $(sub-config-identity-test-resources)
