--- a/sdk/ml/azure-ai-ml/tests/test_configs/monitoring/yaml_configs/data_drift.yaml
+++ b/sdk/ml/azure-ai-ml/tests/test_configs/monitoring/yaml_configs/data_drift.yaml
@@ -33,15 +33,15 @@ create_monitor:
           type: mltable
           path: azureml:Direct:1
         data_context: test
-        data_window_size: P60D
+        lookback_window_size: P60D
       reference_data:
         input_data:
           type: mltable
           path: azureml:Direct:1
         data_context: test
         data_window: 
-          data_window_size: P30D
-          data_window_offset: P30D
+          lookback_window_size: P30D
+          lookback_window_offset: P30D
       metric_thresholds:
         numerical:
           jensen_shannon_distance: 0.5
