--- a/sdk/ml/azure-ai-ml/tests/test_configs/monitoring/yaml_configs/data_quality.yaml
+++ b/sdk/ml/azure-ai-ml/tests/test_configs/monitoring/yaml_configs/data_quality.yaml
@@ -33,7 +33,7 @@ create_monitor:
           type: mltable
           path: azureml:Direct:1
         data_context: test
-        data_window_size: "P60D"
+        lookback_window_size: "P60D"
       reference_data:
         input_data:
           type: mltable
