add Public param to ci.yml test

--- a/sdk/textanalytics/ci.yml
+++ b/sdk/textanalytics/ci.yml
@@ -28,6 +28,7 @@ pr:
 extends:
   template: ../../eng/pipelines/templates/stages/archetype-sdk-client.yml
   parameters:
+    Public: true
     ServiceDirectory: textanalytics
     TestProxy: true
     Artifacts:
