retry setting env var

--- a/eng/pipelines/templates/stages/archetype-sdk-client.yml
+++ b/eng/pipelines/templates/stages/archetype-sdk-client.yml
@@ -75,6 +75,9 @@ parameters:
 - name: AdvancedBuild
   type: boolean
   default: false
+- name: Public
+  type: boolean
+  default: true
 
 variables:
   - template: /eng/pipelines/templates/variables/globals.yml
@@ -110,6 +113,7 @@ stages:
         TestProxy: ${{ parameters.TestProxy }}
         GenerateApiReviewForManualOnly: ${{ parameters.GenerateApiReviewForManualOnly }}
         AdvancedBuild: ${{ parameters.AdvancedBuild }}
+        Public: ${{ parameters.Public }}
 
   # The Prerelease and Release stages are conditioned on whether we are building a pull request and the branch.
   - ${{if and(ne(variables['Build.Reason'], 'PullRequest'), eq(variables['System.TeamProject'], 'internal'))}}:
@@ -125,3 +129,4 @@ stages:
         TargetDocRepoOwner: ${{ parameters.TargetDocRepoOwner }}
         TargetDocRepoName: ${{ parameters.TargetDocRepoName }}
         DevFeedName: ${{ parameters.DevFeedName }}
+        Public: ${{ parameters.Public }}
