--- a/eng/pipelines/templates/jobs/ci.yml
+++ b/eng/pipelines/templates/jobs/ci.yml
@@ -82,6 +82,7 @@ jobs:
       - template: /eng/pipelines/templates/steps/targeting-string-resolve.yml
         parameters:
           BuildTargetingString: ${{ parameters.BuildTargetingString }}
+          Public: ${{ parameters.Public }}
 
       - template: ../steps/build-package-artifacts.yml
         parameters:
@@ -117,6 +118,7 @@ jobs:
       - template: /eng/pipelines/templates/steps/targeting-string-resolve.yml
         parameters:
           BuildTargetingString: ${{ parameters.BuildTargetingString }}
+          Public: ${{ parameters.Public }}
 
       - template: ../steps/build-package-artifacts.yml
         parameters:
@@ -173,6 +175,7 @@ jobs:
     - template: /eng/pipelines/templates/steps/targeting-string-resolve.yml
       parameters:
         BuildTargetingString: ${{ parameters.BuildTargetingString }}
+        Public: ${{ parameters.Public }}
 
     - template: ../steps/build-extended-artifacts.yml
       parameters:
@@ -271,6 +274,7 @@ jobs:
         InjectedPackages: ${{ parameters.InjectedPackages }}
         UnsupportedToxEnvironments: ${{ parameters.UnsupportedToxEnvironments }}
         TestProxy: ${{ parameters.TestProxy }}
+        Public: ${{ parameters.Public }}
 
   - template: /eng/common/pipelines/templates/jobs/archetype-sdk-tests-generate.yml
     parameters:
@@ -307,3 +311,4 @@ jobs:
         BuildTargetingString: ${{ parameters.BuildTargetingString }}
         ServiceDirectory: ${{ parameters.ServiceDirectory }}
         TestTimeoutInMinutes: 90
+        Public: ${{ parameters.Public }}
