few fixes + prints

--- a/eng/pipelines/templates/stages/archetype-sdk-client.yml
+++ b/eng/pipelines/templates/stages/archetype-sdk-client.yml
@@ -77,7 +77,7 @@ parameters:
   default: false
 - name: Public
   type: boolean
-  default: true
+  default: false
 
 variables:
   - template: /eng/pipelines/templates/variables/globals.yml
