--- a/sdk/contentsafety/azure-ai-contentsafety/tsp-location.yaml
+++ b/sdk/contentsafety/azure-ai-contentsafety/tsp-location.yaml
@@ -1,4 +1,4 @@
 directory: specification/cognitiveservices/ContentSafety
 commit: c1ba9df47907f9012ae14ca4616aed9e5665f9e5
 repo: Azure/azure-rest-api-specs
-additionalDirectories: 
+additionalDirectories: []
