--- a/eng/pipelines/templates/steps/targeting-string-resolve.yml
+++ b/eng/pipelines/templates/steps/targeting-string-resolve.yml
@@ -15,8 +15,8 @@ steps:
       Write-Host "Build reason: $(Build.Reason)"
       if ("$(Build.Reason)" -eq 'PullRequest') {
           $public = true
-          Write-Host "Setting Public to $public"
-          Write-Host "##vso[task.setvariable variable=Public]$public"
+          Write-Host "Setting PULLREQUEST to $public"
+          Write-Host "##vso[task.setvariable variable=PULLREQUEST]$public"
       }
 
       Write-Host "Setting TargetingString to $setting"
