--- a/eng/pipelines/templates/steps/targeting-string-resolve.yml
+++ b/eng/pipelines/templates/steps/targeting-string-resolve.yml
@@ -18,7 +18,8 @@ steps:
           Write-Host "Setting PULLREQUEST to $public"
           Write-Host "##vso[task.setvariable variable=PULLREQUEST]$public"
       }
-
+      Write-Host "Setting PULLREQUEST to $public"
+      Write-Host "##vso[task.setvariable variable=PULLREQUEST]$public"
       Write-Host "Setting TargetingString to $setting"
       Write-Host "##vso[task.setvariable variable=TargetingString]$setting"
     displayName: Check override of targeting string
