--- a/eng/pipelines/templates/steps/targeting-string-resolve.yml
+++ b/eng/pipelines/templates/steps/targeting-string-resolve.yml
@@ -18,7 +18,7 @@ steps:
           Write-Host "Setting PULLREQUEST to $public"
           Write-Host "##vso[task.setvariable variable=PULLREQUEST]$public"
       }
-      $public = true
+      $public = $true
       Write-Host "Setting PULLREQUEST to $public"
       Write-Host "##vso[task.setvariable variable=PULLREQUEST]$public"
       Write-Host "Setting TargetingString to $setting"
