don't fail docs step

--- a/eng/pipelines/generate-all-docs.yml
+++ b/eng/pipelines/generate-all-docs.yml
@@ -34,6 +34,7 @@ jobs:
             --toxenv=sphinx
 
       - task: PublishPipelineArtifact@0
+        condition: succeeded()
         inputs:
           artifactName: 'documentation' 
           targetPath: '$(Build.SourcesDirectory)/_docs'
