add strict sphinx tox env

--- a/eng/pipelines/templates/stages/python-analyze-weekly.yml
+++ b/eng/pipelines/templates/stages/python-analyze-weekly.yml
@@ -95,5 +95,4 @@ stages:
               arguments: >-
                 ${{ parameters.BuildTargetingString }}
                 --service="${{ parameters.ServiceDirectory }}" 
-                --toxenv=sphinx
-                --strict=true
+                --toxenv="strict-sphinx"
