--- a/eng/tox/tox.ini
+++ b/eng/tox/tox.ini
@@ -364,7 +364,7 @@ commands =
   python {repository_root}/eng/tox/run_sphinx_build.py \
     -w {envtmpdir}/dist/unzipped/docgen \
     -o {envtmpdir}/dist/site \
-    -r {tox_root}
+    -r {tox_root} \
     --strict true
 
 [testenv:depends]
